<resources>
    <string name="app_name">ContactListProject</string>
    <string name="button_to_display_the_location_of_each_contact">Button to display the location of each contact.</string>
    <string name="button_to_display_the_settings">Button to display the settings.</string>
    <string name="save">Save</string>
    <string name="toggleButton">ToggleButton</string>
    <string name="button_to_display_a_list_of_contacts">Button to display a list of contacts</string>
    <string name="contact">Contact</string>
    <string name="button_to_display_a_map_of_contacts">Button to display a map of contacts</string>
    <string name="button_to_display_the_settings1">Button to display the settings</string>
    <string name="textview">TextView</string>
    <string name="delete">Delete</string>
    <string name="delete1">Delete:</string>
    <string name="new1">New</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
</resources>